--- a/styles/header.css
+++ b/styles/header.css
@@ -15,8 +15,17 @@ body{
     box-sizing: border-box;
     overflow-x: hidden;
 }
+html{
+    scroll-behavior: smooth;
+}
 img{
     object-fit: cover;
+}
+.red{
+    color: var(--color-primary);
+}
+.bold {
+    font-weight: 700;
 }
 .title-section{
     color: var(--color-title);
@@ -184,22 +193,26 @@ header select:focus{
   }
   
   .input-field {
-    width: 50px;
-    height: 20px;
-    margin-top: 0px;
+    width: 30px;
+    height: 40px;
+    position: absolute;
+    right: 0;
+    top: -6px;
     background: transparent;
+    color: transparent;
     border: 5px solid transparent;
     transition: all 0.4s ease-in-out;
-    font-size: 20px;
+    font-size: 18px;
+    padding-bottom: 5px;
     cursor: pointer;
   }
   
   .input-field:focus {
     border-bottom: 3px solid #ffffff;
     width: 25vw;
+    height: fit-content;
     color: #ffffff;
     cursor: default;
-    padding: 12px;
   }
   
   .input-field:focus ~ .search-icon {
@@ -253,8 +266,14 @@ header .logo {
     background-color: red;
 }
 
+/* Mobile */
 
-
+.icon-mobile-menu{
+    display: none;
+}
+.mobile-header{
+    display: none;
+}
 
 
 @media screen and (min-width:350px) and (max-width:500px){
@@ -264,7 +283,7 @@ header .logo {
     .title{
         margin: 0;
         padding: 0;
-        width: 100vw;
+        width: 80vw;
         text-align: center;
         font-size: 48px;
     }
@@ -298,6 +317,21 @@ header .logo {
         margin-left: 32px;
         margin-bottom: 16px;
         width: 130px;
+    }
+
+    /* Mobile */
+
+    .icon-mobile-menu{
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100%;
+        width: 100%;
+        background: #fafafa;
+        transition: all 0.6s ease-in-out;
+    }
+    .mobile-header{
+        display: none;
     }
 
 }
