--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
     width: 100vw;
     height: 810px;
     background: no-repeat;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%), url('../assets/img/index/background-top.webp'), lightgray 50% / cover no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.3)), url('../assets/img/index/background-top.webp');
 }
 .main-button{
     display: inline-flex;
