--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,8 @@
     width: 100vw;
     height: 810px;
     background: no-repeat;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.3)), url('../assets/img/index/background-top.webp');
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../assets/img/index/background-top.webp');
+    background: no-repeat;
 }
 .main-button{
     display: inline-flex;
@@ -102,12 +103,14 @@
 }
 .card-expo:nth-child(1){
     margin-right: var(--spacing);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%), url('../assets/img/index/img-expo.webp'), lightgray 50% / cover no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../assets/img/index/img-expo.webp');
     background-size: cover;
+    background: no-repeat;
 }
 .card-expo:nth-child(2){
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%), url('../assets/img/index/img-expo-1.webp'), lightgray 50% / cover no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../assets/img/index/img-expo-1.webp');
     background-size: cover;
+    background: no-repeat;
 }
 .box-text-expo{
     position: absolute;
