--- a/styles/header.css
+++ b/styles/header.css
@@ -7,7 +7,7 @@
     --color-primary-hover: #941F1F;
     --color-background: #F9FBFC;
     --color-title: #252525;
-    --color-text: #687B8E;
+    --color-text: #64707A;
 }
 body{
     font-family: Helvetica;
