--- a/styles/header.css
+++ b/styles/header.css
@@ -7,7 +7,7 @@
     --color-primary-hover: #941F1F;
     --color-background: #F9FBFC;
     --color-title: #252525;
-    --color-text: #64707A;
+    --color-text: #687B8E;
 }
 body{
     font-family: Helvetica;
@@ -22,7 +22,7 @@ img{
     object-fit: cover;
 }
 .red{
-    color: var(--color-primary);
+    color: var(--color-primary)
 }
 .bold {
     font-weight: 700;
