--- a/styles/exposition.css
+++ b/styles/exposition.css
@@ -90,20 +90,7 @@
 }
 .main-img img{
     width: 100%;
-}
-
-.legend {
-    position: absolute;
-    color: #ffffff;
-    font-size: 20px;
-    width: 90%;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 130%;
-    letter-spacing: 0.2px; 
-    bottom: 25px;
-    left: 25px;
-}   
+} 
 
 /* Exposition */
 .expo{
@@ -201,7 +188,29 @@
     width: 60vw;
     margin: var(--spacing-meduim) 0;
 }
-
+.legend {
+    color: #ffffff;
+    font-size: 20px;
+    width: 100%;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+    letter-spacing: 0.2px; 
+    padding: 0 25px;
+   
+}  
+.overlay{
+    width: 58.5vw;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0px;
+    left: 0px;
+    height: 100px;
+    background-color: rgba(0, 0, 0, 0.3);
+    margin-bottom: 3px;
+}
 .link-more{
     width: 60vw;
     justify-content: center;
@@ -246,6 +255,10 @@
 }
 .box-collection:hover{
     opacity: 0.8;
+}
+.box-collection img{
+    width: 300px;
+    max-height: 200px;
 }
 .title-box-collection{
     color: var(--color-title);
