--- a/styles/index.css
+++ b/styles/index.css
@@ -300,7 +300,7 @@
 }
 .slide img{
     width: 30vw;
-    min-height: 400px;
+    height: 30vw;
 }
 .box-text-collection{
     margin-left: var(--spacing-meduim);
@@ -326,7 +326,7 @@
 }
 .text-collection{
     color: #FFF;
-    width: 50%;
+    width: 60%;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -401,7 +401,7 @@
 }
 .img-news{
     width: 30vw;
-    height: auto;
+    height: 250px;
     object-fit: cover;
 }
 .text-box-news{
