--- a/styles/exposition.css
+++ b/styles/exposition.css
@@ -188,6 +188,9 @@
     width: 60vw;
     margin: var(--spacing-meduim) 0;
 }
+.img-article img{
+    width: 100%;
+}
 .legend {
     color: #ffffff;
     font-size: 20px;
@@ -197,16 +200,16 @@
     line-height: 130%;
     letter-spacing: 0.2px; 
     padding: 0 25px;
-   
 }  
 .overlay{
-    width: 58.5vw;
+    width: 100%;
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     bottom: 0px;
     left: 0px;
+    right: 0;
     height: 100px;
     background-color: rgba(0, 0, 0, 0.3);
     margin-bottom: 3px;
