--- a/styles/header.css
+++ b/styles/header.css
@@ -39,7 +39,7 @@ img{
 .title{
     padding-top: 300px;
     margin-left: 64px;
-    width: 50vw;
+    width: 700px;
     color: #FFF;
     font-family: Abhaya Libre;
     font-size: 75px;
@@ -199,7 +199,7 @@ header select:focus{
     right: 0;
     top: -6px;
     background: transparent;
-    color: transparent;
+    padding-left: 30px;
     border: 5px solid transparent;
     transition: all 0.4s ease-in-out;
     font-size: 18px;
