--- a/styles/exposition.css
+++ b/styles/exposition.css
@@ -108,9 +108,10 @@
 .table-of-content{
     width: 15vw;
     margin-left: var(--spacing-large);
-   position: sticky;
-   top: 20px;
-   z-index: 1; /* Set an appropriate z-index value if needed */
+    position: sticky;
+    top: 0;
+   display: flex;
+   flex-direction: column;
 }
 
 
@@ -139,6 +140,7 @@
     color: var(--color-primary);
 }
 .table-of-content hr{
+    width: 15vw;
     border: 1px solid var(--color-text);
 }
 .share{
@@ -300,7 +302,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: var(--spacing-meduim);
+    gap: var(--spacing-large);
 }
 .logo-slide img{
     width: 200px;
@@ -356,6 +358,7 @@
 
     /* Ariane */
     .ariane{
+        margin-top: 32px;
         margin-left: 32px;
         margin-bottom: 32px;
         width: 80vw;
@@ -372,6 +375,9 @@
         gap: 0;
         margin: 0;
     }
+    .presentation .title-section{
+        margin-left: 64px;
+    }
     .text {
         width: 80vw;
         font-size: 18px;
@@ -384,15 +390,6 @@
         margin-left: var(--spacing-small);
         margin-top: var(--spacing-small);
         width: 85vw;
-    }
-    .legend {
-        position: relative;
-        font-size: 16px;
-        bottom: auto;
-        left: auto;
-        margin-top: 8px;
-        color: var(--color-title);
-        margin-bottom: 32px;
     }
 
     /* Exposition */
@@ -412,6 +409,7 @@
     .title-expo {
         font-size: 30px;
         margin : 0px;
+        margin-bottom: 16px;
     }
     .text-expo {
         width: 85vw;
@@ -431,11 +429,23 @@
     .img-article img{
         width: 80vw;
     }
-
+    .legend {
+        color: var(--color-title);
+        font-size: 16px;
+        padding: 0px;
+    }  
+    .overlay{
+        width: 80vw;
+        margin-top: 8px;
+        margin-bottom: 25px;
+        height: fit-content;
+        position: relative;
+        background-color: transparent;
+    }
     .link-more {
         width:85vw;
         margin: 0px;
-        margin-top: var(--spacing-meduim);
+        margin-top: var(--spacing-small);
         font-size: 18px;
     }
     .link-more svg{
@@ -475,9 +485,10 @@
     }
 
     .logo-slide img{
-        width: 125px;
+        width: 100px;
     }
     .box-partner-text{
+        flex-direction: column;
         justify-content: start;
         align-items: flex-start;
     }
