--- a/styles/header.css
+++ b/styles/header.css
@@ -311,6 +311,7 @@ header .logo {
         margin-left: 32px;
         margin-bottom: 16px;
         width: 130px;
+        height: 60px;
     }
     /* Mobile */
 
