--- a/styles/header.css
+++ b/styles/header.css
@@ -1,16 +1,46 @@
 .student-project {
-    background-color: var(--color-primary);
-    color: #FFF;
-    padding: 10px;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 9999;
+  color: #FFF;
+  padding: 10px;
+  text-align: center;;
 }
-.student-project  a {
-    color: #e5e5e5;
+
+.student-project a {
+  color: #e5e5e5;
 }
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+
+.popup-content {
+  background-color: var(--color-primary);
+  width: 80%;
+  max-width: 600px;
+  margin: 80px auto;
+  padding: 40px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.student-project a {
+  color: #e5e5e5;
+}
+
 :root {
     --spacing-large: 128px;
     --spacing-meduim: 64px;
